[workspace]
members = ["contracts/*", "packages/*"]

[profile.release.package.agent]
codegen-units = 1
incremental = false

[profile.release.package.nft]
codegen-units = 1
incremental = false

[profile.release.package.token]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false